Migrate from yargs to optimist

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "chalk": "*",
     "lexing": "*",
     "loge": "*",
+    "optimist": "*",
     "pdfi": "*",
-    "tarry": "*",
-    "yargs": "*"
+    "tarry": "*"
   },
   "devDependencies": {
     "declarations": "*",
