--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "lexing": "*",
     "loge": "*",
     "optimist": "*",
-    "pdfi": "*",
-    "tarry": "*"
+    "pdfi": "*"
   },
   "devDependencies": {
     "declarations": "*",
