--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     "module": "commonjs",
     "target": "ES5"
   },
@@ -7,6 +8,8 @@
     "node_modules/declarations/chalk/chalk.d.ts",
     "node_modules/declarations/node/node.d.ts",
     "node_modules/declarations/optimist/optimist.d.ts",
+    "node_modules/declarations/pako/pako.d.ts",
+    "node_modules/declarations/unorm/unorm.d.ts",
     "bin/pdfi-node.ts",
     "index.ts",
     "source.ts"
