--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
   },
   "bin": {
     "pdfi": "bin/pdfi-node.js"
+  },
+  "scripts": {
+    "prepare": "tsc",
+    "write-npmignore": "{ tsc --listFiles | sed \"s#^$(pwd)##\" | grep -Fv node_modules; echo tsconfig.json; } > .npmignore",
+    "write-gitignore": "tsc --listEmittedFiles | sed \"s#^TSFILE: $(pwd)##\" > .gitignore",
+    "clean": "tsc --listEmittedFiles | sed 's/^TSFILE: //' | xargs rm -v"
   }
 }
